--- a/UTooLRoundRobin/project.properties
+++ b/UTooLRoundRobin/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-15
-android.library.reference.1=../UTooL Common
+android.library.reference.1=../../utool-tournament-management/UTooL Common
