--- a/UTooLRoundRobin/.project
+++ b/UTooLRoundRobin/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>UTooLRoundRobin</name>
+	<name>UTooL_RoundRobin</name>
 	<comment></comment>
 	<projects>
 	</projects>
